# ark-backgrounds

./: .gitignore  AUTHORS  ChangeLog  NEWS  PKGBUILD  README.md  ark-backgrounds.doap  ark-backgrounds.install  build-prod.sh  meson.build
.github/workflows/: build.yml
backgrounds/: grid.jxl  grid.xml.in  meson.build
